[gd_scene load_steps=4 format=3 uid="uid://dj8pwucjf4lv5"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="1_6m5gn"]
[ext_resource type="StyleBox" uid="uid://c3rw2njbv6r1a" path="res://resources/simple_panel.tres" id="1_l4mno"]
[ext_resource type="PackedScene" uid="uid://cta405o54sfdg" path="res://scenes/ui/volume_controls.tscn" id="2_yd7en"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6m5gn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_l4mno")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="MarginContainer2" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "= GAME PAUSED ="
horizontal_alignment = 1

[node name="VolumeControls" parent="Control/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_yd7en")]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 4
columns = 2

[node name="DifficultyLabel" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "%No"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DifficultySlider" type="HSlider" parent="Control/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 8

[node name="DifficultyDescription" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Line 1
Line 2
Line 3"
horizontal_alignment = 1

[node name="ButtonResume" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 8
text = "RESUME"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="value_changed" from="Control/PanelContainer/MarginContainer/VBoxContainer/GridContainer/DifficultySlider" to="." method="_on_difficulty_slider_value_changed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/ButtonResume" to="." method="_on_button_resume_pressed"]
